[package]
name = "time_travel_stealth_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
earcut = "0.4.4"
include_dir = "0.7.4"
macroquad = "0.4.14"
nalgebra = { version = "0.34.1", features = ["convert-glam027", "serde", "serde-serialize"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
slotmap = { version = "1.0.7", features = ["serde"] }
toml = "0.9.8"
typetag = "0.2.21"
