[package]
name = "time_travel_stealth_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
earcut = "0.4.4"
include_dir = "0.7.4"
# This has to be manually switched to "=0.4.13" to get WASM to work
macroquad = "0.4.14"
nalgebra = { version = "0.34.1", features = ["convert-glam027", "serde", "serde-serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
slotmap = { version = "1.0.7", features = ["serde"] }
typetag = "0.2.21"
